--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hPanel - File Manager</title>
+        <title>clearPanel - File Manager</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <!-- Login Screen -->
     <div id="loginScreen" class="login-container">
         <div class="login-box">
-            <h1>🖥️ hPanel</h1>
+            <h1>🖥️ clearPanel</h1>
             <h2>File Manager</h2>
             <form id="loginForm">
                 <input type="text" id="username" placeholder="Username" required>
@@ -26,7 +26,7 @@
         <!-- Header -->
         <header class="header">
             <div class="header-left">
-                <h1>🖥️ hPanel</h1>
+                <h1>🖥️ clearPanel</h1>
             </div>
             <div class="header-right">
                 <span id="currentUser"></span>
